--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,5 +15,5 @@ jobs:
         
       - name: Create Git Release
         uses: ab-git-actions/gh-release@v1.0.3
-        env:
+        with:
           github_token: '${{ secrets.GH_TOKEN }}'
