--- a/.github/workflows/upload-to-pypi.yml
+++ b/.github/workflows/upload-to-pypi.yml
@@ -1,7 +1,7 @@
 name: Publish Python 🐍 distribution 📦 to PyPI
 
 on:
-  push:x
+  push:
     tags:
       - "*"    # publish when you publish a GitHub Release
   workflow_dispatch:       # allow manual runs
