Change version to dynamic in pyproject.toml
Updated project versioning to dynamic.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "gh-actions-tool-kit"
-version = "0.1.0"
+dynamic = ["version"]
 description = "Tiny actions/core-style helpers for Python GitHub Actions"
 readme = "README.md"
 requires-python = ">=3.8"
