--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=68", "wheel"]
+requires = ["setuptools>=80", "setuptools-scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -14,6 +14,11 @@ maintainers = [
 ]
 license = "MIT"
 license-files = ["LICENSE"]
+
+[tool.setuptools_scm]
+# Basic config https://setuptools-scm.readthedocs.io/en/latest/
+version_scheme = "only-version"
+local_scheme   = "no-local-version"
 
 [project.optional-dependencies]
 dev = ["pytest>=8", "mypy>=1.10", "types-setuptools"]
